force-app/main/default/objects/KimbleOne__CreditNoteAdjustment__c/KimbleOne__CreditNoteAdjustment__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Credit Note Adjustment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Credit Note Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>