force-app/main/default/objects/KimbleOne__CreditNoteAdjustment__c/fields/KimbleOne__AdjustmentValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AdjustmentValue__c</fullName>
    <label>Adjustment Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>