force-app/main/default/objects/KimbleOne__CreditNoteAdjustment__c/fields/KimbleOne__CreditNoteAdjustmentReason__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditNoteAdjustmentReason__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reason</label>
    <referenceTo>KimbleOne__CreditNoteAdjustmentReason__c</referenceTo>
    <relationshipLabel>Credit Note Adjustments</relationshipLabel>
    <relationshipName>CreditNoteAdjustments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>