force-app/main/default/objects/KimbleOne__CreditNoteAdjustment__c/fields/KimbleOne__DeliveryElement__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Element</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Credit Note Adjustments</relationshipLabel>
    <relationshipName>CreditNoteAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>